--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,8 @@
   header {
     @apply sm:mt-10 mt-5;
   }
+  
+  
 
   header img {
     @apply w-full max-w-lg h-auto object-contain mx-auto drop-shadow-md;
@@ -59,9 +61,20 @@
   .wrapper {
     @apply px-5 py-12 max-w-7xl mx-auto flex flex-col relative z-10;
   }
-
+  .genre-section {
+    @apply space-y-5 ;
+  }
+  
+  .genre-row ul {
+    @apply flex flex-row gap-4 overflow-x-auto hide-scrollbar pb-2;
+  }
+  
+  .genre-row ul::-webkit-scrollbar {
+    display: none;
+  }
+  
   .trending {
-    @apply mt-20 ;
+    @apply mt-16 ;
   }
 
   .trending ul {
@@ -105,7 +118,7 @@
   }
 
   .movie-card {
-    @apply bg-dark-100 p-5 rounded-2xl mt-1 shadow-inner shadow-light-100/10 transition-transform transform hover:scale-105;
+    @apply bg-dark-100 p-5 rounded-xl mt-1 shadow-inner shadow-light-100/10 transition-transform transform hover:border-gray-600 hover:scale-105;
   }
 
   .movie-card img {
@@ -165,4 +178,5 @@
   .hide-scrollbar::-webkit-scrollbar {
     display: none;
   }
+
 }
